--- a/style.css
+++ b/style.css
@@ -2,4 +2,52 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: Poppins;
+}
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+}
+.container {
+  display: grid;
+  grid-template-columns: 250px 1fr 300px;
+  height: 100%;
+  overflow: hidden;
+}
+
+/* menu design */
+#menu {
+  background: whitesmoke;
+}
+
+.logo {
+  padding: 20px 40px;
+}
+
+.logo img {
+  width: 120px;
+}
+
+.menu-item a {
+  text-decoration: none;
+  color: black;
+  padding: 8px 30px;
+  display: block;
+  margin: 12px 0;
+  color: rgb(128, 129, 129);
+  font-weight: 400;
+}
+
+.menu-item a:hover {
+  background: rgb(250, 212, 218);
+}
+
+
+#food-container {
+  background: coral;
+}
+#cart {
+  background: lavender;
 }
