--- a/style.css
+++ b/style.css
@@ -44,10 +44,67 @@ body {
   background: rgb(250, 212, 218);
 }
 
-
 #food-container {
-  background: coral;
+  background: whitesmoke;
+  overflow: scroll;
+  overflow-x: hidden;
+  box-sizing: content-box;
 }
+
+#header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  position: sticky;
+  top: 0;
+  background: whitesmoke;
+  z-index: 1;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+#header .address {
+  font-size: 20px;
+  font-family: Poppins;
+}
+
+.your-address {
+  border: 1px solid indianred;
+  color: indianred;
+  padding: 5px 10px;
+  border-radius: 5px;
+  width: 150px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+
+.util i, .user i {
+  font-size: 18px;
+  margin: 0 16px;
+  border: 1px solid crimson;
+  padding: 8px 16px;
+  color: crimson;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.util i:active {
+  color: white;
+  background: crimson;
+}
+
+.add-box i {
+  font-size: 18px;
+}
+
+.food-items {
+}
+
 #cart {
   background: lavender;
 }
