--- a/style.css
+++ b/style.css
@@ -151,8 +151,8 @@ body {
 }
 
 #item-card img {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   margin: auto;
   display: block;
@@ -199,5 +199,64 @@ body {
 }
 
 #cart {
-  background: lavender;
+  background: whitesmoke;
+  padding-left: 30px;
+  overflow-y: scroll;
+}
+
+.taste-header {
+  padding-top: 40px;
+  padding-bottom: 10px;
+  position: sticky;
+  top: 0;
+  background: whitesmoke;
+}
+
+.item-menu {
+  margin: 0;
+  font-size: 30px;
+  margin-top: 40px;
+  color: indianred;
+  background: whitesmoke;
+}
+
+.border {
+  width: 80px;
+  height: 4px;
+  margin: 3px 0;
+  margin-bottom: 30px;
+  border-radius: 2px;
+  background: coral;
+}
+
+.list-card {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: 0.3s all ease-in-out;
+}
+
+.list-card:hover {
+  background: rgb(255, 216, 222);
+}
+
+.list-card:hover img {
+  transition: 0.5s all ease-in-out;
+  transform: scale(1.2);
+}
+
+.list-card img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.list-name {
+  font-size: 20px;
+  margin: 0 10px;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: rgb(94, 43, 43);
 }
