--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ body {
 }
 
 .food-items {
+  display: none;
 }
 
 #biryani,
@@ -133,7 +134,7 @@ body {
 }
 
 #item-card {
-  width: 180px;
+  width: 190px;
   height: 220px;
   padding: 10px;
   margin: 10px;
@@ -259,4 +260,61 @@ body {
   text-decoration: none;
   text-transform: capitalize;
   color: rgb(94, 43, 43);
+}
+
+.cart-toggle {
+
+}
+
+#cart-page {
+  background: white;
+  margin: 40px 10px;
+  margin-right: 50px;
+  padding: 20px 30px;
+  padding-bottom:30;
+  position: relative;
+}
+
+#cart-title {
+  font-size: 30px;
+  color: indianred;
+}
+
+#cart-page table {
+  width: 100%;
+  margin-top: 20px;
+  text-align: center;
+}
+
+#cart-page table thead td {
+  font-size: 25px;
+  padding-bottom: 10px;
+}
+
+#m-total-amount {
+  display: none;
+}
+
+#cart-page table tbody td {
+  padding: 10px;
+  font-size: 20px;
+}
+
+#cart-page table tbody button {
+  outline: none;
+  border: none;
+  font-size: 16px;
+  background: none;
+  background: lightcoral ;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  margin: 5px;
+  padding: 3px 8px;
+}
+
+#cart-page table tbody img {
+  width: 75px;
+  height: 75px;
+  border-radius: 50px;
 }
